--- a/strayhero/package.json
+++ b/strayhero/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.config.js --host 192.168.1.3",
+    "start": "ng serve --proxy-config proxy.config.js --host 192.168.1.11",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -18,7 +18,9 @@
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
